--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/annotations": "^5.6",
+        "laravelcollective/html": "^5.6",
         "prettus/l5-repository": "^2.6"
     },
     "require-dev": {
